[package]
name = "kernel"
version = "0.1.0"
authors = ["Austin Peace <guitar12amp@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
volatile-register = "0.2.x"
cortex-a = "4.0.0"
register = "0.5.x"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.25"

[lib]
name = "libkernel"
test = true

[[bin]]
name = "kernel"
test = false

[[test]]
name = "allocator"
harness = true

[[test]]
name = "mmu_test"
harness = true

[[test]]
name = "interrupt_test"
harness = true

[[test]]
name = "interrupt_test_save"
harness = true